<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="muchbeer.raum.com.gcertnotekeeper.NoteActivity"
    tools:showIn="@layout/activity_note"
    >
    <Spinner
        android:id="@+id/spinner_courses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"/>

    <EditText
        android:id="@+id/text_note_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Note title"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@+id/spinner_courses"
        app:layout_constraintRight_toRightOf="@+id/spinner_courses"
        app:layout_constraintTop_toBottomOf="@+id/spinner_courses"/>

    <EditText
        android:id="@+id/text_note_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Note text"
        android:inputType="textMultiLine"
        app:layout_constraintLeft_toLeftOf="@+id/text_note_title"
        app:layout_constraintRight_toRightOf="@+id/text_note_title"
        app:layout_constraintTop_toBottomOf="@+id/text_note_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>