<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="muchbeer.raum.com.gcertnotekeeper.NoteActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="100"
        android:title="Cancel"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="101"
        android:title="Send as email"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="102"
        android:title="@string/sample_menu"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/action_set_reminder"
        android:orderInCategory="103"
        android:title="Set reminder"/>
</menu>